# lidar-slam

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bags.json  convert.sh  docker-compose.yml  four-camera.json  foxglove_bridge.sh  launch_bash.sh  launch_pointLIO.sh  launch_rosScript.py  launch_rosScript.sh  launch_roscore.sh  lidar_foxglove.json  main.py  ouster128-newercollege.yaml  parse_tum.py  pointLIO_NewerCollege.launch  pointLIO_foxglove.launch  pyproject.toml  ros_getcsv.sh  rosbag_play.sh  roscore.sh  run_all.py  setup_local.sh  setup_ros.sh
