[project]
name = "lidar-slam"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "evo>=1.31.1",
    "files-to-prompt>=0.6",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets==7.7.1",
    "manim>=0.19.0",
    "numpy>=2.2.6",
    "pre-commit>=4.2.0",
    "pyqt5>=5.15.11",
    "pyside6>=6.9.0",
    "rosdep>=0.25.1",
]
